100851/E
K.cpp: In instantiation of ‘void __f(const char*, Arg1&&) [with Arg1 = std::vector<int>&]’:
K.cpp:229:21:   required from here
K.cpp:39:27: error: cannot bind ‘std::basic_ostream<char>’ lvalue to ‘std::basic_ostream<char>&&’
     cerr << name << " : " << arg1 << std::endl;
                           ^
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from K.cpp:1:
/usr/include/c++/4.8/ostream:602:5: error:   initializing argument 1 of ‘std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = std::vector<int>]’
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
